--- a/PsychShift/Packages/manifest.json
+++ b/PsychShift/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.formats.fbx": "4.2.1",
     "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.inputsystem": "1.5.1",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
