--- a/PsychShift/Packages/manifest.json
+++ b/PsychShift/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.5.1",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.recorder": "4.0.2",
     "com.unity.render-pipelines.universal": "14.0.7",
     "com.unity.splines": "2.2.1",
     "com.unity.textmeshpro": "3.0.6",
