--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 PsychShift/Assets/StreamingAssets/Saves/Save.txt
 PsychShift/Assets/StreamingAssets/Saves/Save.txt
+PsychShift/Assets/StreamingAssets/Saves/Save.txt.meta
