--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,61 @@ crashlytics-build.properties
 PsychShift/Assets/StreamingAssets/Saves/Save.txt
 PsychShift/Assets/StreamingAssets/Saves/Save.txt
 PsychShift/Assets/StreamingAssets/Saves/Save.txt.meta
+PsychShift/Assets/Design Department/blackhole/Black_Hole_VFX_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/blackhole2/New_Black-Hole_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Bullet_impact_package.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Checkpoint_VFX_Package.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Death Particle Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Fire_VFX_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Gun VFX Projectile.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Mind_Swap_Start.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Mind_Swap_Tunnel_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Mind_Swap_Tunnel_Effect_2.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Shower_VFX_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Smoke_VFX_package.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Sword VFX Export.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/WallRun_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Water_Effects_Package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/Week 13/Week13/DeathParticle/Death Particle Effect.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/Week 15/Lobbyfountain/WaterEffect/Water_Effects_Package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 19/Shock_VFX_Package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 19/Smoke_VFX_package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/Week 21/teslacoileffect/Tesla_Coil_Shock_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 23/portal/portalfvx/Portal_VFX_Effects.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Explosion_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Pain_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Shotgun_Hit_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Star_VFX_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 27/dusty/Dust_Impact_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 27/steammist/Steam_Mist_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 27/steamspray/Steam_Spray_VFX.unitypackage.meta
+PsychShift/Assets/StreamingAssets/Saves/Save.txt.meta
+PsychShift/Assets/Design Department/EFFECTS/blackhole2/New_Black-Hole_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Bullet_impact_package.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Checkpoint_VFX_Package.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Death Particle Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Fire_VFX_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Gun VFX Projectile.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Mind_Swap_Start.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Mind_Swap_Tunnel_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Mind_Swap_Tunnel_Effect_2.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Shower_VFX_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Smoke_VFX_package.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Sword VFX Export.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/WallRun_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/EFFECTS/fx EXPORT/Water_Effects_Package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/Week 13/Week13/DeathParticle/Death Particle Effect.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/Week 15/Lobbyfountain/WaterEffect/Water_Effects_Package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 19/Shock_VFX_Package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 19/Smoke_VFX_package.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/Week 21/teslacoileffect/Tesla_Coil_Shock_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 23/portal/portalfvx/Portal_VFX_Effects.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Explosion_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Pain_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Shotgun_Hit_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 25/misc/effects/Star_VFX_Effect.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 27/dusty/Dust_Impact_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 27/steammist/Steam_Mist_VFX.unitypackage.meta
+PsychShift/Assets/Design Department/TESTING/ART & PROP TESTING/week 27/steamspray/Steam_Spray_VFX.unitypackage.meta
+PsychShift/Assets/StreamingAssets/Saves/Save.txt.meta
+PsychShift/Assets/Design Department/EFFECTS/blackhole2/New_Black-Hole_VFX.unitypackage.meta
